--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://meet-sensible-monitor.ngrok-free.app",
+    "url": "https://meet-sensible-monitor.ngrok-free.app/favicon.png",
     "name": "Kong klash",
     "iconUrl": "https://ton.vote/logo.png",
     "description": "Description of your dApp"
