--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,6 +1,6 @@
 {
     "url": "https://meet-sensible-monitor.ngrok-free.app/favicon.png",
-    "name": "Kong klash",
+    "name": "Kong Klash",
     "iconUrl": "https://ton.vote/logo.png",
     "description": "Description of your dApp"
   }
