--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
     "url": "https://meet-sensible-monitor.ngrok-free.app/favicon.png",
     "name": "Kong Klash",
-    "iconUrl": "https://kongklash-89b3b.web.app/favicon.ico",
+    "iconUrl": "https://kongklash-89b3b.web.app/favicon.png",
     "description": "Description of your dApp"
   }
   
